--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,10 +7,12 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+parameters:
+    images_directory: '%kernel.project_dir%/web/uploads/image'
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -37,6 +39,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form-themes:
+        - bootstrap_3_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
